# shorturl-rust

./: Cargo.toml  README.md
src/: database.rs  entry.rs  main.rs  shortener.rs
static/: index.html
